fix:style of sidebar and overflow in main-component

--- a/medical-record-management/src/app/components/dashboard-items/sidebar/sidebar.component.css
+++ b/medical-record-management/src/app/components/dashboard-items/sidebar/sidebar.component.css
@@ -55,7 +55,7 @@
   height: 0.9rem;
   background-color: #002B49;
   border-radius: 50%;
-  margin-left: 1rem;
+  margin-left: 4rem;
   margin-right: 1rem  ;
 }
 
@@ -73,6 +73,7 @@
   color: #1e49a5;
   text-decoration: underline;
   padding: 0.75rem 0;
+  margin-bottom: auto;
 }
 
 .logout-text:hover {
